[package]
name = "pallet-evm-precompiles-erc721"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
num_enum = { workspace = true }
precompile-utils = { workspace = true }
scale-info = { workspace = true }

pallet-nft = { workspace = true }
pallet-xls20 = { workspace = true }
pallet-token-approvals = { workspace = true }
seed-pallet-common = { workspace = true }
seed-primitives = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-nft/std",
	"pallet-xls20/std",
	"pallet-token-approvals/std",
	"seed-pallet-common/std",
	"fp-evm/std",
	"pallet-evm/std",
	"frame-support/std",
	"frame-system/std",
	"num_enum/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-primitives/std",
]
