[package]
name = "pallet-evm-precompiles-futurepass-registrar"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
precompile-utils = { workspace = true }
num_enum = { workspace = true }
seed-primitives = { workspace = true }
pallet-futurepass = { workspace = true }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-proxy = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "fp-evm/std",
    "pallet-evm/std",
    "frame-system/std",
    "frame-support/std",
    "num_enum/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "seed-primitives/std",
    "pallet-futurepass/std",
    "pallet-proxy/std",
]

