[package]
name = "pallet-evm-precompiles-marketplace"
version = "2.0.0"
authors = ["The Root Network Team"]
edition = "2021"
repository = "https://github.com/futureversecom/seed"

[dependencies]
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
num_enum = { version = "0.5.3", default-features = false }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v1.0.0-TRN" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v1.0.0-TRN" }

# TRN
precompile-utils = { path = "../utils", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }
pallet-marketplace = { path = "../../pallet/marketplace", default-features = false }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "num_enum/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "fp-evm/std",
    "pallet-evm/std",
    "precompile-utils/std",
    "seed-primitives/std",
    "pallet-marketplace/std",
]
