[package]
name = "pallet-evm-precompiles-marketplace"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
num_enum = { workspace = true }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# TRN
precompile-utils = { workspace = true }
seed-primitives = { workspace = true }
pallet-marketplace = { workspace = true }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "num_enum/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "fp-evm/std",
    "pallet-evm/std",
    "precompile-utils/std",
    "seed-primitives/std",
    "pallet-marketplace/std",
]
