[package]
name = "pallet-evm-precompiles-peg"
version = "2.0.0"
authors = ["The Root Network Team"]
edition = "2021"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }
pallet-nft-peg = { path = "../../pallet/nft-peg", default-features = false }
pallet-erc20-peg = { path = "../../pallet/erc20-peg", default-features = false }

# Substrate
frame-system = { git = "https://github.com/futureversecom/trn-substrate", branch = "polkadot-v0.9.30-warped", default-features = false }
frame-support = { git = "https://github.com/futureversecom/trn-substrate", branch = "polkadot-v0.9.30-warped", default-features = false }
sp-core = { git = "https://github.com/futureversecom/trn-substrate", branch = "polkadot-v0.9.30-warped", default-features = false }
sp-runtime = { git = "https://github.com/futureversecom/trn-substrate", branch = "polkadot-v0.9.30-warped", default-features = false }
sp-std = { git = "https://github.com/futureversecom/trn-substrate", branch = "polkadot-v0.9.30-warped", default-features = false }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "trn-substrate-v0.9.30-warped2" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "trn-substrate-v0.9.30-warped2" }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "fp-evm/std",
    "pallet-evm/std",
    "frame-system/std",
    "frame-support/std",
    "num_enum/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "seed-primitives/std",
    "pallet-nft-peg/std",
    "pallet-erc20-peg/std",
]

