[package]
name = "precompile-utils"
authors = ["The Root Network Team"]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = "0.1.2"
hex = { version = "0.4.3", default-features = false }
impl-trait-for-tuples = "0.2.2"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/futureversecom/trn-substrate", default-features = false , branch = "polkadot-v0.9.30-warped" }
frame-system = { git = "https://github.com/futureversecom/trn-substrate", default-features = false , branch = "polkadot-v0.9.30-warped" }
sp-core = { git = "https://github.com/futureversecom/trn-substrate", default-features = false , branch = "polkadot-v0.9.30-warped" }
sp-io = { git = "https://github.com/futureversecom/trn-substrate", default-features = false , branch = "polkadot-v0.9.30-warped" }
sp-std = { git = "https://github.com/futureversecom/trn-substrate", default-features = false , branch = "polkadot-v0.9.30-warped" }

# Frontier
evm = { version = "0.36.0", default-features = false, features = ["with-codec"] }
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "trn-substrate-v0.9.30-warped2" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "trn-substrate-v0.9.30-warped2" }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "similar-asserts", "std" ]
