[package]
name = "precompile-utils"
description = "Utils to write EVM precompiles."
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
affix = "0.1.2"
similar-asserts = { version = "1.1.0", optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
sha3 = { workspace = true }

# Moonbeam
precompile-utils-macro = { workspace = true }

# Substrate
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
evm = { workspace = true }
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "similar-asserts", "std" ]
