[package]
name = "pallet-assets-ext"
version = "1.0.1"
authors = ["The Root Network Team"]
edition = "2021"
repository = "https://github.com/futureversecom/seed"
description = "Extended functionality for pallet-assets"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
frame-system = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
frame-benchmarking = { git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait", optional = true, default-features = false }
pallet-assets = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-std = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }

seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }
precompile-utils = { path = "../../evm-precompiles/utils", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-io = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
pallet-evm = { git = "https://github.com/futureversecom/frontier", branch = "trn-tx-fees-trait" }
pallet-timestamp = { git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"precompile-utils/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
