[package]
name = "pallet-assets-ext"
version = "1.0.1"
description = "Extended functionality for pallet-assets"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

seed-primitives = { workspace = true }
seed-pallet-common = { workspace = true }
precompile-utils = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-evm = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-fee-control = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"precompile-utils/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
