[package]
name = "seed-pallet-common"
version = "1.0.0"
description = "Common types and traits used across multiple pallets"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

seed-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"sp-core/std",
	"sp-std/std",
	"seed-primitives/std",
	"sp-runtime/std"
]

runtime-benchmarks = ["frame-benchmarking"]