[package]
name = "pallet-crowdsale"
version = "1.0.0"
description = "Root Network Crowdsale pallet"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

pallet-assets-ext = { workspace = true }
seed-primitives = { workspace = true }
seed-pallet-common = { workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-nft = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets-ext/std",
    "seed-primitives/std",
    "seed-pallet-common/std",
    "frame-benchmarking?/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
