[package]
name = "pallet-dex"
version = "0.0.1"
authors = ["The Root Network Team"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/futureversecom/seed"
description = "Root Network DEX module"

[dependencies]
hex={ version = "0.4.3", default-features= false }
serde = { version = "1.0.145", default-features= false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-core = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
frame-benchmarking = { git = "https://github.com/futureversecom/substrate", default-features = false, optional = true, branch = "trn-tx-fees-trait" }
frame-support = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
frame-system = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-arithmetic = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
sp-std = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }

seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
pallet-assets = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "trn-tx-fees-trait" }
pallet-assets-ext = { path = "../assets-ext" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "seed-primitives/std",
    "seed-pallet-common/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
