[package]
name = "pallet-doughnut"
version = "1.0.0"
authors = ["The Root Network Team"]
edition = "2021"
repository = "https://github.com/futureversecom/seed"
description = "Static and dynamic fee setting through a pallet" # TODO: update description

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
hex-literal = "0.3.4"
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.30", default-features = false, optional = true }

doughnut-rs = { git = "https://github.com/futureversecom/trn-doughnut-rs", branch = "feat/trn-doughnut-trnnut-merge", default-features = false, features = ["crypto"] }
# doughnut-rs = { path = "../../../trn-doughnut-rs", default-features = false, features = ["crypto"] }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
seed-pallet-common = { path = "../common", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }
precompile-utils = { path = "../../evm-precompiles/utils", default-features = false }
pallet-futurepass = { path = "../futurepass", default-features = false }

[dev-dependencies]
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
fp-self-contained = { git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-evm = { git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-fee-control = { path = "../fee-control" }
pallet-fee-proxy = { path = "../fee-proxy" }
pallet-dex = { path = "../dex" }
pallet-assets-ext = { path = "../assets-ext" }
seed-pallet-common= { path = "../common" }
pallet-futurepass = { path = "../futurepass" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"fp-evm/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"precompile-utils/std",
	"doughnut-rs/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
